--- a/AffinityManager/Views/ManagerWindow.xaml
+++ b/AffinityManager/Views/ManagerWindow.xaml
@@ -1,12 +1,23 @@
-﻿<Window x:Class="AffinityManager.Views.ManagerWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AffinityManager.Views"
-        mc:Ignorable="d"
-        Title="ManagerWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+﻿<Window
+	x:Class="AffinityManager.Views.ManagerWindow"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:local="clr-namespace:AffinityManager.Views"
+	xmlns:viewmodels="clr-namespace:AffinityManager.ViewModels"
+	mc:Ignorable="d"
+	Title="ManagerWindow"
+	Height="450"
+	Width="800"
+	d:DataContext="{d:DesignInstance viewmodels:ManagerViewModel}">
+	<Grid>
+		<ItemsControl ItemsSource="{Binding Rules}">
+			<ItemsControl.ItemTemplate>
+				<DataTemplate>
+					<local:RuleControl DataContext="{Binding}"/>
+				</DataTemplate>
+			</ItemsControl.ItemTemplate>
+		</ItemsControl>
+	</Grid>
 </Window>
