--- a/AffinityManager/Views/ManagerWindow.xaml
+++ b/AffinityManager/Views/ManagerWindow.xaml
@@ -21,5 +21,6 @@
 				</DataTemplate>
 			</ItemsControl.ItemTemplate>
 		</ItemsControl>
+		<Button Content="Apply changes" Command="{Binding ApplyChangesCommand}"/>
 	</StackPanel>
 </Window>
