--- a/AffinityManager/Views/CoreView.xaml
+++ b/AffinityManager/Views/CoreView.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-	x:Class="AffinityManager.Views.CoreControl"
+	x:Class="AffinityManager.Views.CoreView"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,7 +11,13 @@
 	d:DesignHeight="450"
 	d:DesignWidth="800"
 	d:DataContext="{d:DesignInstance viewmodels:CoreViewModel}">
-	<Border Margin="5" Width="10" Height="10" CornerRadius="2" Background="{Binding IsEnabled, Converter={converters:BooleanConverter WhenTrue={x:Static Brushes.CornflowerBlue}, WhenFalse={x:Static Brushes.LightGray}}}">
+	<Border
+		Margin="5"
+		Width="10"
+		Height="10"
+		CornerRadius="2"
+		Background="{Binding IsEnabled, Converter={converters:BooleanConverter WhenTrue={x:Static Brushes.CornflowerBlue}, WhenFalse={x:Static Brushes.LightGray}}}"
+		ToolTip="{Binding CoreNumber}">
 		<i:Interaction.Triggers>
 			<i:EventTrigger EventName="MouseDown">
 				<i:InvokeCommandAction Command="{Binding ToggleCommand}"/>
