--- a/AffinityManager/Views/ManagerWindow.xaml
+++ b/AffinityManager/Views/ManagerWindow.xaml
@@ -22,6 +22,7 @@
 				</DataTemplate>
 			</ItemsControl.ItemTemplate>
 		</ItemsControl>
+		<Button Content="Add new rule" Margin="5" Background="#bbeebb" Command="{Binding AddRuleCommand}"/>
 		<Button Content="Apply changes" Command="{Binding ApplyChangesCommand}"/>
 	</StackPanel>
 </Window>
