--- a/AffinityManager/Views/RuleCOntrol.xaml
+++ b/AffinityManager/Views/RuleCOntrol.xaml
@@ -14,6 +14,11 @@
 	d:DataContext="{d:DesignInstance viewmodels:RuleViewModel}">
 	<StackPanel
 		Orientation="Horizontal">
+		<controls:DragHandle
+			Width="10"
+			Margin="2"
+			Row="{Binding RelativeSource={RelativeSource AncestorType=local:RuleView}}"
+			Container="{Binding ElementName=RulesContainer}"/>
 		<controls:TextBoxWithPlaceholder
 			Width="150"
 			Margin="5 5 0 5"
@@ -23,9 +28,11 @@
 			Width="300"
 			Margin="5 5 0 5"
 			Text="{Binding Pattern, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-			Placeholder="^my_app[0-9]*$"/>
+			Placeholder="^my_app[0-9]*$" />
 		<ItemsControl
-			ItemsSource="{Binding Cores}">
+			ItemsSource="{Binding Cores}"
+			VerticalAlignment="Center"
+			Margin="5 0 5 0">
 			<ItemsControl.ItemsPanel>
 				<ItemsPanelTemplate>
 					<StackPanel
@@ -45,6 +52,6 @@
 		<TextBlock
 			Text="✎"
 			Visibility="{Binding Changed, Converter={converters:BooleanConverter WhenTrue={x:Static Visibility.Visible}, WhenFalse={x:Static Visibility.Collapsed}}}"
-			VerticalAlignment="Center"/>
+			VerticalAlignment="Center" />
 	</StackPanel>
 </UserControl>
