--- a/AffinityManager/Views/ManagerWindow.xaml
+++ b/AffinityManager/Views/ManagerWindow.xaml
@@ -6,6 +6,7 @@
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:local="clr-namespace:AffinityManager.Views"
 	xmlns:viewmodels="clr-namespace:AffinityManager.ViewModels"
+	xmlns:controls="clr-namespace:AffinityManager.Controls"
 	mc:Ignorable="d"
 	Title="ManagerWindow"
 	Height="450"
@@ -21,8 +22,7 @@
 			ItemsSource="{Binding Rules}">
 			<ItemsControl.ItemsPanel>
 				<ItemsPanelTemplate>
-					<StackPanel
-						x:Name="RulesContainer" />
+					<controls:DragAndDropPanel />
 				</ItemsPanelTemplate>
 			</ItemsControl.ItemsPanel>
 			<ItemsControl.ItemTemplate>
