--- a/AffinityManager/Views/RuleCOntrol.xaml
+++ b/AffinityManager/Views/RuleCOntrol.xaml
@@ -17,8 +17,7 @@
 		<controls:DragHandle
 			Width="10"
 			Margin="2"
-			Row="{Binding RelativeSource={RelativeSource AncestorType=local:RuleView}}"
-			Container="{Binding ElementName=RulesContainer}"/>
+			Container="{Binding RelativeSource={RelativeSource AncestorType=controls:DragAndDropPanel}}" />
 		<controls:TextBoxWithPlaceholder
 			Width="150"
 			Margin="5 5 0 5"
@@ -35,7 +34,8 @@
 			Margin="5 0 5 0">
 			<ItemsControl.ItemsPanel>
 				<ItemsPanelTemplate>
-					<controls:DragAndDropPanel />
+					<StackPanel
+						Orientation="Horizontal" />
 				</ItemsPanelTemplate>
 			</ItemsControl.ItemsPanel>
 			<ItemsControl.ItemTemplate>
