--- a/AffinityManager/Views/RuleCOntrol.xaml
+++ b/AffinityManager/Views/RuleCOntrol.xaml
@@ -15,8 +15,8 @@
 	<StackPanel
 		Orientation="Horizontal">
 		<controls:DragHandle
-			Width="10"
-			Margin="2"
+			Width="14"
+			Margin="5 4 0 4"
 			Container="{Binding RelativeSource={RelativeSource AncestorType=controls:DragAndDropPanel}}" />
 		<controls:TextBoxWithPlaceholder
 			Width="150"
