--- a/AffinityManager/Views/RuleCOntrol.xaml
+++ b/AffinityManager/Views/RuleCOntrol.xaml
@@ -12,45 +12,53 @@
 	d:DesignHeight="450"
 	d:DesignWidth="800"
 	d:DataContext="{d:DesignInstance viewmodels:RuleViewModel}">
-	<StackPanel
-		Orientation="Horizontal">
-		<controls:DragHandle
-			Width="14"
-			Margin="5 4 0 4"
-			Container="{Binding RelativeSource={RelativeSource AncestorType=controls:DragAndDropPanel}}" />
-		<controls:TextBoxWithPlaceholder
-			Width="150"
-			Margin="5 5 0 5"
-			Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-			Placeholder="rule name" />
-		<controls:TextBoxWithPlaceholder
-			Width="300"
-			Margin="5 5 0 5"
-			Text="{Binding Pattern, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-			Placeholder="^my_app[0-9]*$" />
-		<ItemsControl
-			ItemsSource="{Binding Cores}"
-			VerticalAlignment="Center"
-			Margin="5 0 5 0">
-			<ItemsControl.ItemsPanel>
-				<ItemsPanelTemplate>
-					<StackPanel
-						Orientation="Horizontal" />
-				</ItemsPanelTemplate>
-			</ItemsControl.ItemsPanel>
-			<ItemsControl.ItemTemplate>
-				<DataTemplate>
-					<local:CoreView
-						DataContext="{Binding}" />
-				</DataTemplate>
-			</ItemsControl.ItemTemplate>
-		</ItemsControl>
-		<TextBlock
-			VerticalAlignment="Center"
-			Text="{Binding MatchingProcesses}" />
-		<TextBlock
-			Text="✎"
-			Visibility="{Binding Changed, Converter={converters:BooleanConverter WhenTrue={x:Static Visibility.Visible}, WhenFalse={x:Static Visibility.Collapsed}}}"
-			VerticalAlignment="Center" />
-	</StackPanel>
+	<DockPanel>
+		<StackPanel
+			Orientation="Horizontal"
+			DockPanel.Dock="Right">
+			<TextBlock
+				Text="✎"
+				Margin="5 0 5 0"
+				Foreground="DarkRed"
+				Visibility="{Binding Changed, Converter={converters:BooleanConverter WhenTrue={x:Static Visibility.Visible}, WhenFalse={x:Static Visibility.Hidden}}}"
+				VerticalAlignment="Center" />
+		</StackPanel>
+		<StackPanel
+			Orientation="Horizontal">
+			<controls:DragHandle
+				Width="14"
+				Margin="5 4 0 4"
+				Container="{Binding RelativeSource={RelativeSource AncestorType=controls:DragAndDropPanel}}" />
+			<controls:TextBoxWithPlaceholder
+				Width="150"
+				Margin="5 5 0 5"
+				Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+				Placeholder="rule name" />
+			<controls:TextBoxWithPlaceholder
+				Width="300"
+				Margin="5 5 0 5"
+				Text="{Binding Pattern, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+				Placeholder="^my_app[0-9]*$" />
+			<ItemsControl
+				ItemsSource="{Binding Cores}"
+				VerticalAlignment="Center"
+				Margin="5 0 5 0">
+				<ItemsControl.ItemsPanel>
+					<ItemsPanelTemplate>
+						<StackPanel
+							Orientation="Horizontal" />
+					</ItemsPanelTemplate>
+				</ItemsControl.ItemsPanel>
+				<ItemsControl.ItemTemplate>
+					<DataTemplate>
+						<local:CoreView
+							DataContext="{Binding}" />
+					</DataTemplate>
+				</ItemsControl.ItemTemplate>
+			</ItemsControl>
+			<TextBlock
+				VerticalAlignment="Center"
+				Text="{Binding MatchingProcesses}" />
+		</StackPanel>
+	</DockPanel>
 </UserControl>
