--- a/AffinityManager/Controls/DragHandle.xaml
+++ b/AffinityManager/Controls/DragHandle.xaml
@@ -8,56 +8,18 @@
 	mc:Ignorable="d"
 	d:DesignHeight="450"
 	d:DesignWidth="800">
-	<UserControl.Resources>
-		<Style
-			TargetType="Border"
-			x:Key="Circle">
-			<Setter
-				Property="Background"
-				Value="#eeeeee" />
-			<Setter
-				Property="Width"
-				Value="4" />
-			<Setter
-				Property="Height"
-				Value="4" />
-			<Setter
-				Property="CornerRadius"
-				Value="2" />
-			<Setter
-				Property="Margin"
-				Value="2" />
-		</Style>
-	</UserControl.Resources>
 	<Border
 		Background="LightGray"
 		Cursor="Hand"
-		CornerRadius="3 0 0 3">
+		CornerRadius="5 0 0 5">
 		<Grid>
 			<Border
-				Style="{StaticResource Circle}"
-				VerticalAlignment="Top"
-				HorizontalAlignment="Left" />
-			<Border
-				Style="{StaticResource Circle}"
-				VerticalAlignment="Top"
-				HorizontalAlignment="Right" />
-			<Border
-				Style="{StaticResource Circle}"
 				VerticalAlignment="Center"
-				HorizontalAlignment="Left" />
-			<Border
-				Style="{StaticResource Circle}"
-				VerticalAlignment="Center"
-				HorizontalAlignment="Right" />
-			<Border
-				Style="{StaticResource Circle}"
-				VerticalAlignment="Bottom"
-				HorizontalAlignment="Left" />
-			<Border
-				Style="{StaticResource Circle}"
-				VerticalAlignment="Bottom"
-				HorizontalAlignment="Right" />
+				HorizontalAlignment="Center"
+				CornerRadius="2"
+				Width="4"
+				Height="4"
+				Background="#eeeeee" />
 		</Grid>
 	</Border>
 </UserControl>
