--- a/AffinityManager/Views/RuleCOntrol.xaml
+++ b/AffinityManager/Views/RuleCOntrol.xaml
@@ -11,8 +11,7 @@
 	mc:Ignorable="d"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
-	d:DataContext="{d:DesignInstance viewmodels:RuleViewModel}"
-	xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
+	d:DataContext="{d:DesignInstance viewmodels:RuleViewModel}">
 	<DockPanel
 		Margin="5 5 5 0"
 		SnapsToDevicePixels="True">
